@@ -15,6 +15,7 @@
 - Added parse() method to all enumeration properties.
 - Fixed knob behaviour which didn't trigger SLOT_CHANGE event when dragging knob's scale.
 - Added ipadding() property for internal padding of the tk::Group widget.
+- Fixed bugs reladed to SLOT_CHANGE notification delivery for tk::Switch widget.
 
 TODO:
 - Add custom mouse pointer for fraction actions.
